# Monte_Carlo_5220

./: CMakeLists.txt  README.md  main.cpp  monte-carlo-open.cpp  monte-carlo-serial.cpp  monte-carlo.cpp  monte-carlo.h  monte-carlo_test.cpp
hw2/: main.cpp  monte-carlo-open.cpp  monte-carlo-serial.cpp  monte-carlo.h  monte-carlo_test.cpp  openmp.cpp  serial.cpp  test.py
hw3/: CMakeLists.txt  gpu.cu  job-gpu  main.cu  monte-carlo.cu  monte-carlo.h  slurm-22413229.out  slurm-22413232.out  test.py
